--- a/Mykolaiv Free/localisation/russian/new_states_l_russian.yml
+++ b/Mykolaiv Free/localisation/russian/new_states_l_russian.yml
@@ -1,3 +1,5 @@
 ﻿l_russian:
- STATE_909:0" Правобережжя"
- STATE_910:0" Первомайськ"
+ STATE_909:0 "Правобережжя"
+ STATE_910:0 "Богопіля"
+ STATE_911:0 "Полісся"
+ STATE_912:0 "Павлоград" 
