--- a/Mykolaiv Free/localisation/russian/new_countries_l_russian.yml
+++ b/Mykolaiv Free/localisation/russian/new_countries_l_russian.yml
@@ -41,3 +41,9 @@
  UKG_neutrality: "Український Гетьманат"
  UKG_neutrality_DEF: "Український Гетьманат"
  UKG_neutrality_ADJ: "Гетьманська"
+ SLB_communism: "Об'єднані Ради Слобожанщини"
+ SLB_communism_DEF: "Об'єднані Ради Слобожанщини"
+ SLB_communism_ADJ: "Слобожанська"
+ PSL_fascism: "Православна Слов'янська Держава"
+ PSL_fascism_DEF: "Православна Слов'янська Держава"
+ PSL_fascism_ADJ: "Православна"
