--- a/USC/localisation/russian/new_countries_l_russian.yml
+++ b/USC/localisation/russian/new_countries_l_russian.yml
@@ -44,6 +44,9 @@
  SLB_communism: "Об'єднані Ради Слобожанщини"
  SLB_communism_DEF: "Об'єднані Ради Слобожанщини"
  SLB_communism_ADJ: "Слобожанська"
+ SLB_neutrality: "Вільна Слобожанщина"
+ SLB_neutrality_DEF: "Вільна Слобожанщина"
+ SLB_neutrality_ADJ: "Слобожанська"
  PSL_fascism: "Православна Слов'янська Держава"
  PSL_fascism_DEF: "Православна Слов'янська Держава"
  PSL_fascism_ADJ: "Православна"
