--- a/USC/localisation/russian/new_ideas_l_russian.yml
+++ b/USC/localisation/russian/new_ideas_l_russian.yml
@@ -1,3 +1,5 @@
 ﻿l_russian:
  red_pidor_of_ukraine:0 "'Червоний Пітер України'"
  red_pidor_of_ukraine_desc:0 "За активність більшовиків Миколаїв дістав прізвисько «червоний Пітер України», як і зараз у місті існує комуністичне підпілля"
+ party_crisis1:0 "Криза в партії"
+ party_crisis1_desc:0 "ОУН об'єднала в собі багато рухів, від учасників антигетьманського повстання до право-радикальних сил. Зараз можна виокремити два рухи в середині партії:ОУН-Б 'Бандерівці' і ОУН-М 'Мельниковці'. ОУН-Б вважає що Україна постане без допомоги інших держав, і не буде сильно спиратись на Німеччину. Натомість ОУН-М представляють старше, більш помірковане крило організації. Мельник вважає що Україна зможе здобути незалежність тільки з допомогою Німеччини. Зараз організацію від розколу утримує тільки авторитет Є.Коновальця. "
